2023/11/06 chi square test - web

--- a/djpro21chi2_coffee/.project
+++ b/djpro21chi2_coffee/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>djpro19ajaxex2_jquery</name>
+	<name>djpro21chi2_coffee</name>
 	<comment></comment>
 	<projects>
 	</projects>
